1，完善onerror机制，在TimiWorker的xhr【error，404】，script【error】时报错 2，增加iframe的工具到_timi对象，防止覆盖

--- a/test/index.html
+++ b/test/index.html
@@ -21,6 +21,8 @@
         <button>2</button>
         <button>3</button>
         <button>4</button>
+        <button>5</button>
+        <button>6</button>
     </div>
     <hr>
     <button id="run_terminate" class="run">Terminate wList(0)</button>
