iframe默认的onerror监听改为window.addEventListener('error', 防止用户的onerror覆盖

--- a/test/index.html
+++ b/test/index.html
@@ -23,6 +23,7 @@
         <button>4</button>
         <button>5</button>
         <button>6</button>
+        <button>7</button>
     </div>
     <hr>
     <button id="run_terminate" class="run">Terminate wList(0)</button>
