增加close方法，并补充文档

--- a/test/index.html
+++ b/test/index.html
@@ -24,6 +24,7 @@
         <button>5</button>
         <button>6</button>
         <button>7</button>
+        <button>8</button>
     </div>
     <hr>
     <button id="run_terminate" class="run">Terminate wList(0)</button>
